# rules_brainfuck

./: .bazelrc  .gitignore  BUILD  MODULE.bazel  README.md  USAGE.md  brainfuck.bzl  defs.bzl
examples/: BUILD  simple_loop.bf
tests/: BUILD  add.bf  print_a.bf  simple_loop_expected.txt
